# aoc2023-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
day1/: README.md  main.cpp
day10/: README.md  day10_test.cpp  main.cpp
day10/include/: day10.hpp
day11/: README.md  day11_test.cpp  main.cpp
day11/include/: day11.hpp
day2/: README.md  main.cpp
day3/: README.md
day4/: README.md  main.cpp
day5/: README.md  day5_test.cpp  main.cpp
day5/include/: day5.hpp
day6/: README.md  day6_test.cpp  main.cpp
day6/include/: day6.hpp
day7/: README.md  day7_test.cpp  main.cpp
day7/include/: day7.hpp
day8/: README.md  day8_test.cpp  main.cpp
day8/include/: day8.hpp
day9/: README.md  day9_test.cpp  main.cpp
day9/include/: day9.hpp
include/aoc/: digit.hpp  fs.hpp  stringutils.hpp
libaoc/: CMakeLists.txt
libaoc/include/aoc/: aoc.hpp  collections.hpp  core.hpp  digit.hpp  fs.hpp  grid.hpp  hash.hpp  stringutils.hpp  types.hpp
libaoc/src/: digit.cpp  fs.cpp  stringutils.cpp
problems/: day2.md
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp
tests/: CMakeLists.txt  collections_test.cpp  decode_test.cpp  grid_test.cpp  hash_test.cpp  stringutils_test.cpp
tools/: generate.py
